Closed
Bug 1356049
Opened 9 years ago
Closed 9 years ago
Map ARIA figure role
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
mozilla56
| Tracking | Status | |
|---|---|---|
| firefox56 | --- | fixed |
People
(Reporter: jdiggs, Assigned: jdiggs)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
|
4.94 KB,
patch
|
MarcoZ
:
review+
|
Details | Diff | Splinter Review |
Steps to reproduce:
1. Load data:text/html,<div role="figure">foo</div>
2. Use Accerciser to examine the element
Expected results: the element would be exposed with ROLE_PANEL
Actual results: the element is exposed with ROLE_SECTION
https://rawgit.com/w3c/aria/master/core-aam/core-aam.html#role-map-figure
| Assignee | ||
Updated•9 years ago
|
Summary: ARIA figure role should be mapped as ATK_ROLE_PANEL → Map ARIA figure role
| Assignee | ||
Comment 1•9 years ago
|
||
Updated•9 years ago
|
Attachment #8883264 -
Flags: review?(mzehe) → review+
| Assignee | ||
Updated•9 years ago
|
Keywords: checkin-needed
Pushed by cbook@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/976ff4ac8ead
Map ARIA figure role. r=marcoz
Keywords: checkin-needed
Comment 3•9 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
status-firefox56:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
You need to log in
before you can comment on or make changes to this bug.
Description
•