Bug 1356049 - Map ARIA figure role. r=marcoz Add the figure role to the ARIA role map so that it's exposed on all platforms. Expose "figure" as the AXRoleDescription for macOS.