accessible/mac/mozAccessible.mm
@@ -981,6 +981,9 @@ struct RoleDescrComparator
   if (mRole == roles::DOCUMENT)
     return utils::LocalizedString(NS_LITERAL_STRING("htmlContent"));
 
+  if (mRole == roles::FIGURE)
+    return utils::LocalizedString(NS_LITERAL_STRING("figure"));
+
   if (mRole == roles::HEADING)
     return utils::LocalizedString(NS_LITERAL_STRING("heading"));
 
